elastic-system/k8s/ingress-route-kibana.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kibana
  namespace: elastic-system
spec:
  entryPoints:
    - websecure
  tls: 
    secretName: tls-kibana
  routes:
    - match: Host(`kibana.env0.luojm.com`) 
      kind: Rule
      services:
      - name: kibana-kb-http
        kind: Service
        namespace: elastic-system
        port: 5601
